added certification to about section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="media.css">
     <script defer src = "script.js"></script>
     <script src="https://kit.fontawesome.com/616aafbeaf.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
 </head>
 <body>
     <nav id = "desktop-nav" class="hidden">
@@ -77,6 +78,7 @@
                         <p class ="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class ="tab-links" onclick="opentab('education')">Education</p>
                         <p class ="tab-links" onclick="opentab('experience')">Experience</p>
+                        <p class ="tab-links" onclick="opentab('certifications')">Certifications</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
@@ -89,6 +91,11 @@
                             <li><span>Manchester Metropolitan University</span><br>2.1 in Software Development (FDSc)</li>
                             <li><span>Highest Scoring Module</span><br>79% in Mobile Application Development (Java / Android Studio)</li>
                         </ul>
+                    </div>
+                    <div class="tab-contents" id="certifications">
+                        <div data-iframe-width="150" data-iframe-height="290" data-share-badge-id="4b07f296-3714-4df1-af0e-133ef60901f7" 
+                        data-share-badge-host="https://www.credly.com">
+                        </div>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
