fixed responsiveness regarding certification

--- a/index.html
+++ b/index.html
@@ -78,11 +78,13 @@
                         <p class ="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class ="tab-links" onclick="opentab('education')">Education</p>
                         <p class ="tab-links" onclick="opentab('experience')">Experience</p>
-                        <p class ="tab-links" onclick="opentab('certifications')">Certifications</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
-                        <ul>
-                            <li><span>AWS & .NET</span><br>Actively manage and deploy AWS applications, and also build programs in the .NET framework.</li>
+                        <div data-iframe-width="160" data-iframe-height="240" data-share-badge-id="4b07f296-3714-4df1-af0e-133ef60901f7" 
+                        data-share-badge-host="https://www.credly.com">
+                        </div>
+                        <ul style="margin-left: 2rem;">
+                            <li><span>AWS & .NET</span><br>Achieved AWS Certified Cloud Practitioner Certification. <br><br>Actively manage and deploy AWS applications, and also build programs in the .NET framework.</li>
                             <li><span>Full Stack Development</span><br>Using HTML, CSS, JS/ReactJS, SQL and PHP</li>
                         </ul>
                     </div>
@@ -91,11 +93,6 @@
                             <li><span>Manchester Metropolitan University</span><br>2.1 in Software Development (FDSc)</li>
                             <li><span>Highest Scoring Module</span><br>79% in Mobile Application Development (Java / Android Studio)</li>
                         </ul>
-                    </div>
-                    <div class="tab-contents" id="certifications">
-                        <div data-iframe-width="150" data-iframe-height="290" data-share-badge-id="4b07f296-3714-4df1-af0e-133ef60901f7" 
-                        data-share-badge-host="https://www.credly.com">
-                        </div>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
