updated about me section content

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p class ="tab-links" onclick="opentab('experience')">Experience</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
-                        <div data-iframe-width="160" data-iframe-height="240" data-share-badge-id="4b07f296-3714-4df1-af0e-133ef60901f7" 
+                        <div data-iframe-width="160" data-iframe-height="250" data-share-badge-id="4b07f296-3714-4df1-af0e-133ef60901f7" 
                         data-share-badge-host="https://www.credly.com">
                         </div>
                         <ul style="margin-left: 2rem;">
@@ -91,7 +91,11 @@
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>Manchester Metropolitan University</span><br>2.1 in Software Development (FDSc)</li>
-                            <li><span>Highest Scoring Module</span><br>79% in Mobile Application Development (Java / Android Studio)</li>
+                            <li><span>Modules: </span><br>Fundamentals of Programming<br> Introduction to Web & Database
+                            Development<br> Linux Fundamentals with Administration<br> Professional & Academic Development<br>
+                            Advanced Object Oriented Programming<br> Database Driven Websites<br> Mobile Applications Development<br>
+                            Practice Based Research Project</li>
+                            <li><span>Highest Scoring Module</span><br>79% in Mobile Applications Development</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -102,11 +106,11 @@
                                 <br><br>With a focus on AWS and .NET we undertook different problems and 
                                 challenged ourselves to think creatively and apply our knowledge more effectively. 
                                 I completed the training with an average mark of 96%.
-                                <br><br>The programme included:
+                                <br><br>The programme included:<br><br>
                                 • Soft skills, Python programming, Linux command line.
                                 • Networking and Network securities, Relational Databases.
                                 • Aws: CloudFront, Lambda, S3, EC2, DynamoDB, Route 53, Load Balancing, Scaling.
-                                <br><br>I am scheduled to sit my AWS Cloud Practitioner Exam soon.</li>
+                            </li>
                         </ul>
                     </div>
                 </div>
