updated syntax on skills

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div data-iframe-width="160" data-iframe-height="250" data-share-badge-id="4b07f296-3714-4df1-af0e-133ef60901f7" 
                         data-share-badge-host="https://www.credly.com">
                         </div>
-                        <ul style="margin-left: 2rem;">
+                        <ul id="skill-list">
                             <li><span>AWS & .NET</span><br>Achieved AWS Certified Cloud Practitioner Certification. <br><br>Actively manage and deploy AWS applications, and also build programs in the .NET framework.</li>
                             <li><span>Full Stack Development</span><br>Using HTML, CSS, JS/ReactJS, SQL and PHP</li>
                         </ul>
