added another project

--- a/index.html
+++ b/index.html
@@ -126,8 +126,9 @@
                     <div class="work">
                         <img src="./assets/project1.jpg"/>
                         <div class="layer">
-                            <h3 style="color: white;">VideoGame Site</h3>
-                            <p>React Site dedicated to everything videogame and tech. Always
+                            <h3 style="color: white;">React Game Blog Site</h3>
+                            <p>
+                                Site dedicated to everything videogame and tech. Always
                                 being updated and improved.
                             </p>
                             <a href="https://master.d3pu2bivqtw1u3.amplifyapp.com" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -137,9 +138,22 @@
                         <img src="./assets/snake-logo.jpg"/>
                         <div class="layer">
                             <h3 style="color: white;">Snake Game</h3>
-                            <p>The classic Snake game coded entirely in C#. Still a work in progress. 
+                            <p>
+                                The classic Snake game coded entirely in C#. Aim to add modes and features soon. 
                             </p>
                             <a href="https://github.com/ashramzan/SnakeGame" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="./assets/hadith2.png"/>
+                        <div class="layer">
+                            <h3 style="color: white;">React Native Mobile Application</h3>
+                            <p>
+                                App that utilises an API to fetch quotes and display them at random
+                                to the user with author and reference. Following internal and closed testing 
+                                will be published to the Google Play Store as a source of information and learning.      
+                            </p>
+                            <a href="https://github.com/ashramzan/HadithOfTheDay" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
